--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.basgeekball:awesome-validation:4.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
